test/spec/imports.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/imports.wast
(;; STDOUT ;;;
called host spectest.print(i32:13) =>
called host spectest.print(i32:14, f32:42.000000) =>
called host spectest.print(i32:13) =>
called host spectest.print(i32:13) =>
called host spectest.print(f32:13.000000) =>
called host spectest.print(i32:13) =>
called host spectest.print(f64:25.000000, f64:53.000000) =>
called host spectest.print(f64:24.000000) =>
called host spectest.print(f64:24.000000) =>
called host spectest.print(f64:24.000000) =>
out/test/spec/imports.wast:99: assert_unlinkable passed:
  error: unknown module field "unknown"
  0000020: error: OnImportFunc callback failed
out/test/spec/imports.wast:103: assert_unlinkable passed:
  error: unknown host function import "spectest.unknown"
  0000024: error: OnImportFunc callback failed
out/test/spec/imports.wast:108: assert_unlinkable passed:
  error: import signature mismatch
  000001e: error: OnImportFunc callback failed
out/test/spec/imports.wast:112: assert_unlinkable passed:
  error: import signature mismatch
  000001e: error: OnImportFunc callback failed
out/test/spec/imports.wast:116: assert_unlinkable passed:
  error: import signature mismatch
  000001f: error: OnImportFunc callback failed
out/test/spec/imports.wast:120: assert_unlinkable passed:
  error: import signature mismatch
  0000021: error: OnImportFunc callback failed
out/test/spec/imports.wast:124: assert_unlinkable passed:
  error: import signature mismatch
  0000022: error: OnImportFunc callback failed
out/test/spec/imports.wast:128: assert_unlinkable passed:
  error: import signature mismatch
  0000022: error: OnImportFunc callback failed
out/test/spec/imports.wast:132: assert_unlinkable passed:
  error: import signature mismatch
  0000022: error: OnImportFunc callback failed
out/test/spec/imports.wast:136: assert_unlinkable passed:
  error: import signature mismatch
  0000023: error: OnImportFunc callback failed
out/test/spec/imports.wast:140: assert_unlinkable passed:
  error: import signature mismatch
  0000022: error: OnImportFunc callback failed
out/test/spec/imports.wast:144: assert_unlinkable passed:
  error: import signature mismatch
  0000023: error: OnImportFunc callback failed
out/test/spec/imports.wast:148: assert_unlinkable passed:
  error: import signature mismatch
  0000023: error: OnImportFunc callback failed
out/test/spec/imports.wast:152: assert_unlinkable passed:
  error: import signature mismatch
  0000023: error: OnImportFunc callback failed
out/test/spec/imports.wast:156: assert_unlinkable passed:
  error: import signature mismatch
  0000024: error: OnImportFunc callback failed
out/test/spec/imports.wast:160: assert_unlinkable passed:
  error: import signature mismatch
  0000026: error: OnImportFunc callback failed
out/test/spec/imports.wast:164: assert_unlinkable passed:
  error: import signature mismatch
  0000027: error: OnImportFunc callback failed
out/test/spec/imports.wast:168: assert_unlinkable passed:
  error: import signature mismatch
  0000027: error: OnImportFunc callback failed
out/test/spec/imports.wast:173: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind func, not global
  0000024: error: OnImportFunc callback failed
out/test/spec/imports.wast:177: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind func, not table
  0000025: error: OnImportFunc callback failed
out/test/spec/imports.wast:181: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind func, not memory
  0000025: error: OnImportFunc callback failed
out/test/spec/imports.wast:185: assert_unlinkable passed:
  error: unknown host function import "spectest.global"
  0000023: error: OnImportFunc callback failed
out/test/spec/imports.wast:189: assert_unlinkable passed:
  error: unknown host function import "spectest.table"
  0000022: error: OnImportFunc callback failed
out/test/spec/imports.wast:193: assert_unlinkable passed:
  error: unknown host function import "spectest.memory"
  0000023: error: OnImportFunc callback failed
out/test/spec/imports.wast:227: assert_unlinkable passed:
  error: unknown module field "unknown"
  000001b: error: OnImportGlobal callback failed
out/test/spec/imports.wast:231: assert_unlinkable passed:
  error: unknown host global import "spectest.unknown"
  000001f: error: OnImportGlobal callback failed
out/test/spec/imports.wast:236: assert_unlinkable passed:
  error: expected import "test.func" to have kind global, not func
  0000018: error: OnImportGlobal callback failed
out/test/spec/imports.wast:240: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind global, not table
  0000020: error: OnImportGlobal callback failed
out/test/spec/imports.wast:244: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind global, not memory
  0000020: error: OnImportGlobal callback failed
out/test/spec/imports.wast:248: assert_unlinkable passed:
  error: unknown host global import "spectest.print"
  000001d: error: OnImportGlobal callback failed
out/test/spec/imports.wast:252: assert_unlinkable passed:
  error: unknown host global import "spectest.table"
  000001d: error: OnImportGlobal callback failed
out/test/spec/imports.wast:256: assert_unlinkable passed:
  error: unknown host global import "spectest.memory"
  000001e: error: OnImportGlobal callback failed
out/test/spec/imports.wast:302: assert_invalid passed:
  error: unknown import module ""
  0000011: error: OnImportTable callback failed
out/test/spec/imports.wast:306: assert_invalid passed:
  error: unknown import module ""
  0000011: error: OnImportTable callback failed
out/test/spec/imports.wast:310: assert_invalid passed:
  000000b: error: table count (2) must be 0 or 1
out/test/spec/imports.wast:327: assert_unlinkable passed:
  error: unknown module field "unknown"
  000001c: error: OnImportTable callback failed
out/test/spec/imports.wast:331: assert_unlinkable passed:
  error: unknown host table import "spectest.unknown"
  0000020: error: OnImportTable callback failed
out/test/spec/imports.wast:336: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
  0000021: error: OnImportTable callback failed
out/test/spec/imports.wast:340: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (20)
  0000022: error: OnImportTable callback failed
out/test/spec/imports.wast:344: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
  000001e: error: OnImportTable callback failed
out/test/spec/imports.wast:348: assert_unlinkable passed:
  error: max size (20) larger than declared (15)
  000001f: error: OnImportTable callback failed
out/test/spec/imports.wast:353: assert_unlinkable passed:
  error: expected import "test.func" to have kind table, not func
  0000019: error: OnImportTable callback failed
out/test/spec/imports.wast:357: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind table, not global
  000001f: error: OnImportTable callback failed
out/test/spec/imports.wast:361: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind table, not memory
  0000021: error: OnImportTable callback failed
out/test/spec/imports.wast:365: assert_unlinkable passed:
  error: unknown host table import "spectest.print"
  000001e: error: OnImportTable callback failed
out/test/spec/imports.wast:397: assert_invalid passed:
  error: unknown import module ""
  0000010: error: OnImportMemory callback failed
out/test/spec/imports.wast:401: assert_invalid passed:
  error: unknown import module ""
  0000010: error: OnImportMemory callback failed
out/test/spec/imports.wast:405: assert_invalid passed:
  000000b: error: memory count must be 0 or 1
out/test/spec/imports.wast:420: assert_unlinkable passed:
  error: unknown module field "unknown"
  000001b: error: OnImportMemory callback failed
out/test/spec/imports.wast:424: assert_unlinkable passed:
  error: unknown host memory import "spectest.unknown"
  000001f: error: OnImportMemory callback failed
out/test/spec/imports.wast:429: assert_unlinkable passed:
  error: actual size (2) smaller than declared (3)
  0000020: error: OnImportMemory callback failed
out/test/spec/imports.wast:433: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (3)
  0000021: error: OnImportMemory callback failed
out/test/spec/imports.wast:437: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
  000001e: error: OnImportMemory callback failed
out/test/spec/imports.wast:441: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
  000001f: error: OnImportMemory callback failed
out/test/spec/imports.wast:446: assert_unlinkable passed:
  error: expected import "test.func-i32" to have kind memory, not func
  000001c: error: OnImportMemory callback failed
out/test/spec/imports.wast:450: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind memory, not global
  000001e: error: OnImportMemory callback failed
out/test/spec/imports.wast:454: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind memory, not table
  0000020: error: OnImportMemory callback failed
out/test/spec/imports.wast:458: assert_unlinkable passed:
  error: unknown host memory import "spectest.print"
  000001d: error: OnImportMemory callback failed
out/test/spec/imports.wast:462: assert_unlinkable passed:
  error: unknown host memory import "spectest.global"
  000001e: error: OnImportMemory callback failed
out/test/spec/imports.wast:466: assert_unlinkable passed:
  error: unknown host memory import "spectest.table"
  000001d: error: OnImportMemory callback failed
out/test/spec/imports.wast:471: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
  000001e: error: OnImportMemory callback failed
out/test/spec/imports.wast:475: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
  000001f: error: OnImportMemory callback failed
out/test/spec/imports.wast:493: assert_malformed passed:
  out/test/spec/imports/imports.99.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (func))
          ^^^^^^
out/test/spec/imports.wast:497: assert_malformed passed:
  out/test/spec/imports/imports.100.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (global i64))
          ^^^^^^
out/test/spec/imports.wast:501: assert_malformed passed:
  out/test/spec/imports/imports.101.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (table 0 anyfunc))
          ^^^^^^
out/test/spec/imports.wast:505: assert_malformed passed:
  out/test/spec/imports/imports.102.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (memory 0))
          ^^^^^^
out/test/spec/imports.wast:510: assert_malformed passed:
  out/test/spec/imports/imports.103.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (func))
                              ^^^^^^
out/test/spec/imports.wast:514: assert_malformed passed:
  out/test/spec/imports/imports.104.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (global f32))
                              ^^^^^^
out/test/spec/imports.wast:518: assert_malformed passed:
  out/test/spec/imports/imports.105.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (table 0 anyfunc))
                              ^^^^^^
out/test/spec/imports.wast:522: assert_malformed passed:
  out/test/spec/imports/imports.106.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (memory 0))
                              ^^^^^^
out/test/spec/imports.wast:527: assert_malformed passed:
  out/test/spec/imports/imports.107.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 anyfunc) (import "" "" (func))
                     ^^^^^^
out/test/spec/imports.wast:531: assert_malformed passed:
  out/test/spec/imports/imports.108.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 anyfunc) (import "" "" (global i32))
                     ^^^^^^
out/test/spec/imports.wast:535: assert_malformed passed:
  out/test/spec/imports/imports.109.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 anyfunc) (import "" "" (table 0 anyfunc))
                     ^^^^^^
out/test/spec/imports.wast:539: assert_malformed passed:
  out/test/spec/imports/imports.110.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 anyfunc) (import "" "" (memory 0))
                     ^^^^^^
out/test/spec/imports.wast:544: assert_malformed passed:
  out/test/spec/imports/imports.111.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (func))
              ^^^^^^
out/test/spec/imports.wast:548: assert_malformed passed:
  out/test/spec/imports/imports.112.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (global i32))
              ^^^^^^
out/test/spec/imports.wast:552: assert_malformed passed:
  out/test/spec/imports/imports.113.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (table 1 3 anyfunc))
              ^^^^^^
out/test/spec/imports.wast:556: assert_malformed passed:
  out/test/spec/imports/imports.114.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (memory 1 2))
              ^^^^^^
107/107 tests passed.
;;; STDOUT ;;)
